--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
   shimmer: ^3.0.0
   in_app_purchase: ^3.2.0
   google_mobile_ads: ^5.1.0
-  flutter_gemini: ^2.0.5
+  image_picker: ^1.1.2
+  dash_chat_2: ^0.0.21
+  google_generative_ai: ^0.4.6
 
 dev_dependencies:
   flutter_test:
