--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,15 +5,16 @@
     <key>GADApplicationIdentifier</key>
     <string>ca-app-pub-6754306508338066~1717293110</string>
 
-<!--For getting image permissions-->
-<key>NSPhotoLibraryUsageDescription</key>
-<string>Allow access to photo library</string>
+	<!--For getting image permissions-->
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allow access to photo library</string>
 
-<key>NSCameraUsageDescription</key>
-<string>Allow access to camera to capture photos</string>
+	<!--For camera usage-->
+	<key>NSCameraUsageDescription</key>
+	<string>In order to use this feature, camera permissions are required.</string>
 
-<key>NSMicrophoneUsageDescription</key>
-<string>Allow access to microphone</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Allow access to microphone</string>
 
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
