--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dash_chat_2: ^0.0.21
   google_generative_ai: ^0.4.6
   url_launcher: ^6.3.0
+  camera: ^0.11.0+2
 
 dev_dependencies:
   flutter_test:
