--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   url_launcher: ^6.3.0
   camera: ^0.11.0+2
   purchases_flutter: ^8.1.5
+  connectivity_plus: ^6.1.0
+  swipe_refresh: ^1.1.2
 
 dev_dependencies:
   flutter_test:
