--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   purchases_flutter: ^8.1.5
   connectivity_plus: ^6.1.0
   swipe_refresh: ^1.1.2
+  package_info_plus: ^8.1.2
 
 dev_dependencies:
   flutter_test:
