--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   connectivity_plus: ^6.1.0
   swipe_refresh: ^1.1.2
   package_info_plus: ^8.1.2
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
