Const file changed, and API keys hidden

--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-/lib/const.dart
-
-/lib/const.dart
+/lib/keys.dart
 
 # Symbolication related
 app.*.symbols
