Everything was setup for release builds, just need to figure out some jank and app size issues

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,10 @@ migrate_working_dir/
 /build/
 /lib/keys.dart
 
+# Oh yeah... gonna need to ignore these ones!
+garden_buddy_keystore.jks
+/android/key.properties
+
 # Symbolication related
 app.*.symbols
 
