--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,9 +5,15 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 android {
     namespace = "com.toxicflame427.gardenbuddy"
-    compileSdk = flutter.compileSdkVersion
+    compileSdk = flutter.targetSdkVersion
     ndkVersion = "27.0.12077973"
 
     compileOptions {
@@ -30,11 +36,24 @@ android {
         versionName = flutter.versionName
     }
 
+    signingConfigs {
+        release {
+            keyAlias = keystoreProperties['keyAlias']
+            keyPassword = keystoreProperties['keyPassword']
+            storeFile = keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword = keystoreProperties['storePassword']
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig = signingConfigs.release
+            shrinkResources = true
+            minifyEnabled = true
+
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-riles.pro"
         }
     }
 }
