--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ flutter:
     - assets/icons/sowing.png
     - assets/icons/sunlight.png
     - assets/icons/watering.png
+    - assets/icons/server_icon.png
 
     # Images
     - assets/images/background_garden.jpg
