--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   path: ^1.9.0
   shared_preferences: ^2.5.2
   flutter_html: ^3.0.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
