--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   shared_preferences: ^2.5.2
   flutter_html: ^3.0.0
   path_provider: ^2.1.5
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
