--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,27 +51,22 @@ flutter:
     - assets/icons/gemini_icon.png
     - assets/icons/hand_plant_icon.png
     - assets/icons/health_assessment_icon.jpg
-    - assets/icons/icon_original.jpg
     - assets/icons/icons8_logo.png
     - assets/icons/identify_example_bad.jpg
     - assets/icons/identify_example_good.jpg
     - assets/icons/identify_icon.jpg
-    - assets/icons/magnifying_glass.png
     - assets/icons/pixabay_icon.png
-    - assets/icons/plant_icon.png
-    - assets/icons/potted_plant.png
-    - assets/icons/spoiled_icon.png
     - assets/icons/harvest.png
     - assets/icons/plant.png
     - assets/icons/pruning.png
     - assets/icons/seeds.png
     - assets/icons/sowing.png
-    - assets/icons/sunlight.png
     - assets/icons/watering.png
     - assets/icons/server_icon.png
     - assets/icons/hotpot_ai_icon.png
     - assets/icons/caterpillar.jpg
     - assets/icons/plant_addon.jpg
+    - assets/icons/ai_icon.jpg
 
     # Images
     - assets/images/background_garden.jpg
