A few UI changes. Helth assessment saving and ID saving work, retrieval also works. There is a basci skeleton for the widget tree. The saving features are limited to subscribing ujsers and that has already been handled. Now get that tree up, then work on saving and loading AI chats, that one might be a bit difficult.

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ ios/StoreKitConfig.storekit
 ios/StoreKitTestCertificate.cer
 ios/SubscriptionKey_2C4077D5.p8
 ios/Runner/Info.plist
+ios/Runner/GoogleService-Info.plist
 android/app/src/main/AndroidManifest.xml
 
 # Nobody needs to see debug logs :)
